# bihar-viz-dashboard

./: README.md  main.py  pyproject.toml
app/: l02_functions.py  l05_categories.py  l05_functions.py
assets/: README.md
data/: BL02.parquet  BL05.parquet
notebooks/: 01-feature-selection.ipynb  02-bihar-level-02-graphs.ipynb  03-bihar-level-05-item.ipynb  04-bl-05-item-graphs.ipynb  05-bl-05-item-graphs-function.ipynb  06-pca-l05.ipynb  07-pca-l02.ipynb
pages/: 1_BL_01.py  2_BL_02.py  3_BL_05.py
